# dav_hut_finder

./: .env  .env.development  .env.production  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  Justfile  LICENSE  README.md  dev.Caddyfile  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  airbnb_project.ipynb  app.py  avail_update_script.py  build_hut_database.py  check_availability.py  demo.py  filtering.py  pyproject.toml  setup.py
backend/data/: availability.csv  feasible_connections.csv  huts_database.geojson
backend/search_demo/: README.md  init_db.py
backend/search_demo/core/: settings.py  urls.py
backend/search_demo/hut_finder/: apps.py  models.py  urls.py  views.py
backend/search_demo/hut_finder/migrations/: 0002_rename_person_hut.py
backend/search_demo/hut_finder/templates/hut_finder/: search.html  search_results.html
backend/static/: index_python_app.html
backend/templates/: simple.html
flask-backend/: app.py
frontend/: Dockerfile  index.html  script.js
frontend/public/: index.html
frontend/src/: App.css  App.js  InputForm.js  MapComponent.js  config.js
react-frontend/: Dockerfile  package-lock.json  package.json
react-frontend/src/: App.js  InputForm.css  InputForm.js  MapComponent.js
